--- a/css/css/style.css
+++ b/css/css/style.css
@@ -53,6 +53,15 @@ textarea {
 #email{margin-left:20px;}
 #pesquisar{position:left;}
 #bus_cnpj{margin-left:20px; margin-right:20;}
+#id_forn{margin-left:20px;}
+#nome{margin-right:15px;}
+#qtd_estoque{margin-left:12px; margin-right:15px;}
+#valor{margin-left:22px;}
+#lucro{margin-left:64px; margin-right:15px;}
+#desconto_max{margin-left:15px;}
+#id_prod{margin-left:15px; margin-right:15px;}
+
+
 
 input[type=text]:focus, 
 input[type=text]:active, 
