--- a/css/css/style.css
+++ b/css/css/style.css
@@ -13,6 +13,8 @@ li {padding:26px 0px;border-top:1px dotted #c7c7c7;min-height:27px;}
 /* The actual form */
 /*****************/
 
+
+
 label {
  position: reletive;
  left: 10px;
@@ -47,11 +49,11 @@ textarea {
 #bairro{margin-left:15px; margin-right:10px;}
 #cep{margin-left:5px;}
 #cidade{margin-right:10px;}
-#uf{margin-left:10px; margin-right:20px;}
-#pais{margin-left:46px;}
+#uf{margin-left:10px; margin-right:30px;}
+#pais{margin-left:36px;}
 #fone{margin-right:10px;}
 #email{margin-left:20px;}
-#pesquisar{position:left;}
+#pesquisar{position:left; margin-left:20px;}
 #bus_cnpj{margin-left:20px; margin-right:20;}
 #id_forn{margin-left:20px;}
 #nome{margin-right:15px;}
@@ -60,7 +62,8 @@ textarea {
 #lucro{margin-left:64px; margin-right:15px;}
 #desconto_max{margin-left:15px;}
 #id_prod{margin-left:15px; margin-right:15px;}
-
+#calcular{margin-left:20px; margin-right:20px;}
+#bt_forn{margin-right:25px;}
 
 
 input[type=text]:focus, 
@@ -165,6 +168,59 @@ div.uploader span.action {
 
 /* SPRITES */
 
+/* Tabelas  */
+
+table{
+  border: 0px solid black;
+  border-spacing: 0px;
+}
+
+table thead tr{
+  font-family: Arial, monospace;
+  font-size: 14px;
+}
+
+table thead tr th{
+  border-bottom: 2px solid black;
+  border-top: 1px solid black;
+  margin: 0px;
+  padding: 2px;
+  background-color: #cccccc;
+}
+
+table tr {
+  font-family: arial, monospace;
+  color: black;
+  font-size:12px;
+  background-color: white;
+}
+
+table tr.odd {
+  background-color: #AAAAAA;
+}
+
+table tr td, th{
+  border-bottom: 1px solid black;
+  padding: 19px;
+  
+ 
+}
+
+a:link{
+  font-family:arial, monospace;
+  text-decoration: none;
+  color: teal;
+}
+
+a:hover{
+  text-decoration: underline;
+}
+
+a:visited{
+  color:black;
+  text-decoration: none;
+}
+
 /* Select */
 
 div.selector {
@@ -186,7 +242,7 @@ left:10px;border:1px solid #333;
 
 div.selector:active, 
 div.selector.active {
-	background-position: -483px -192px;
+	background-position: -283px -192px;
 }
 
 div.selector:active span, 
